kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turtles-deployment
spec:
  template:
    spec:
      containers:
      - name: turtles
