kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: turtles-clusterip
spec:
  type: ClusterIP
  selector:
    app: turtles-uat
    variant: uat
